# notion-yt-sync

./: .env.example  .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  youtube_channels_config.json
.github/workflows/: action.yml
api_client/: notion.py  youtube.py
tests/api_client/: test_notion.py  test_youtube.py
